[gd_scene load_steps=6 format=3 uid="uid://da4sa5m84jyg1"]

[ext_resource type="Script" path="res://scenes/task_tracking_menu.gd" id="1_mw60c"]
[ext_resource type="Theme" uid="uid://dubk1ftmdlsay" path="res://themes/green_gal_main_menu_theme.tres" id="1_qw78k"]
[ext_resource type="Theme" uid="uid://dsurd46r2nccp" path="res://themes/green_gal_large_title_theme.tres" id="2_f6a04"]
[ext_resource type="Theme" uid="uid://0yiqrykg4xx2" path="res://themes/green_gal_tiny_text_theme.tres" id="3_vcyui"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1iwhy"]
thickness = 7

[node name="TaskTrackingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mw60c")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_qw78k")

[node name="MenuCenter" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MiddleManagement" type="VBoxContainer" parent="MenuCenter"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MainLabel" type="Label" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("2_f6a04")
text = "Task Tracking"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TaskSheetsButton" type="Button" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("1_qw78k")
text = "Task Sheets"

[node name="ToDoListButton" type="Button" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("1_qw78k")
disabled = true
text = "Task To-Do List"

[node name="StatusLightButton" type="Button" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("1_qw78k")
disabled = true
text = "Status Light"

[node name="CelebrationScreenButton" type="Button" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("1_qw78k")
disabled = true
text = "Celebration Screen"

[node name="TaskMetricsButton" type="Button" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("1_qw78k")
disabled = true
text = "Task Metrics"

[node name="HSeparator" type="HSeparator" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_1iwhy")

[node name="SettingsButton" type="Button" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("1_qw78k")
text = "Task Settings"

[node name="DataManagerButton" type="Button" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("1_qw78k")
text = "Task Data Manager"

[node name="BackButton" type="Button" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("1_qw78k")
text = "Back to Main Menu"

[node name="Notes" type="Label" parent="MenuCenter/MiddleManagement"]
layout_mode = 2
theme = ExtResource("3_vcyui")
text = "Dev Notes: This is the first section being developed.  I intend to work on the modules in the same order as their buttons. "
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="MenuCenter/MiddleManagement/TaskSheetsButton" to="." method="_on_task_sheets_button_pressed"]
[connection signal="pressed" from="MenuCenter/MiddleManagement/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuCenter/MiddleManagement/DataManagerButton" to="." method="_on_data_manager_button_pressed"]
[connection signal="pressed" from="MenuCenter/MiddleManagement/BackButton" to="." method="_on_back_button_pressed"]
